--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ background: -webkit-linear-gradient(45deg, #cfd186 0%,#eae8b6 50%,#eae8b6 51%,#c
 background: linear-gradient(45deg, #cfd186 0%,#eae8b6 50%,#eae8b6 51%,#ccce4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', endColorstr='#ccce4e',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   background-repeat:no-repeat;
-  height:100vh;
+  height:120vh;
  }
 
 
@@ -71,6 +71,7 @@ h1{
 
 .list{
   width:100%;
+  margin-top:30px;
 }
 
 ul {
@@ -126,7 +127,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', end
 
 .global-buttons{
   height:30px;
-  width:160px;
+  width:70%;
   border-radius:10px;
   background-color:rgb(91, 140, 90);
   color:white;
@@ -134,7 +135,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', end
   font-weight:light;
   outline:none;
   padding:20px;
-  margin:20px 5px;
+  margin:10px 5px;
   line-height:0;
   letter-spacing:1px;
   box-shadow:0px 3px 4px gray;
@@ -145,12 +146,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', end
   }
 
 @media only screen and (max-width:720px){
-  .global-buttons{
-  margin:10px;
-  }
 
   .buttons{
-    margin-top:10px;
+    margin:10px auto;
   }
 }
 
