--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ h1{
 .main{
   align-content:center;
   align-items:center;
-  margin-bottom:10rem;
+  margin:0px 14px 10rem 14px;
+
 }
 
 .all{
@@ -35,15 +36,15 @@ h1{
   text-align:center;
   justify-content:center;
   align-items:center;
-  margin-top:30px;
+  margin-top:50px;
   background-color:rgba(255,255,255,.8);
   box-shadow:0 10px 10px 6px gray;
   border-radius:20px;
   }
 
-@media only screen and (max-width:480px){
+@media only screen and (max-width:768px){
   .all{
-  width:80%;
+  width:100%;
   }
 }
 
@@ -125,18 +126,51 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', end
   border-radius:20px;
 }
 
+.drop-down-menu{
+  margin:70px 30px;
+  position:fixed;
+  color:rgba(255,255,255,.8);
+  display:flex;
+  flex-direction:column;
+  background-color:rgba(91, 140, 90, .9);
+  padding:5px 8px;
+  border-radius:10px;
+  box-shadow:0px 3px 4px gray;
+  /*margin-top:44vh;*/
+}
+
+@media only screen and (min-width:768px){
+.drop-down-menu{
+  margin-top:55px;
+  margin-left:70px;
+}
+}
+
+.buttons{
+  display:flex;
+  flex-direction:column;
+  background-color:rgba(255,255,255,.6);
+  box-shadow:0 10px 10px 6px rgba(82, 65, 76, .6);
+  padding:20px;
+  border-radius:20px;
+  margin-top:8rem;
+  position:fixed;
+  /*margin-top:30vh;*/
+}
+
 .global-buttons{
+  text-align: left;
   height:30px;
-  width:70%;
+  width:auto;
   border-radius:10px;
   background-color:rgb(91, 140, 90);
   color:white;
   font-size:14px;
-  font-weight:light;
+  font-weight:lighter;
   outline:none;
-  padding:20px;
-  margin:10px 5px;
-  line-height:0;
+  padding:0 20px;
+  margin:10px;
+  /*line-height:0;*/
   letter-spacing:1px;
   box-shadow:0px 3px 4px gray;
   border:none;
@@ -144,14 +178,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd186', end
   transition: all .3s ease-in;
 /*   transition: background 2s linear; */
   }
-
-@media only screen and (max-width:720px){
-
-  .buttons{
-    margin:10px auto;
-  }
-}
-
 
 .global-buttons:hover{
   background-color:white;
@@ -172,10 +198,11 @@ label{
 
 #add{
   margin-bottom:40px;
- height:30px;
+  height:50px;
   width:160px;
   border-radius:10px;
   background-color:rgb(227, 101, 91);
+  text-align:center;
 }
 
 #add:hover{
